--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <input type="text" placeholder="Enter city name" spellcheck="false" />
         <button><img src="./images/search.png" /></button>
       </div>
+      <div class="error">
+        <p>Invalid City Name</p>
+      </div>
       <div class="weather">
         <div class="weather-upperpart">
           <img src="./images/rain.png" class="weather-icon" />
@@ -36,23 +39,6 @@
         </div>
       </div>
     </div>
-    <script>
-      const apiKey = "f6b930a27546ef38d161dbaaa8bca492";
-      const apiUrl =
-        "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
-
-      async function checkWheather() {
-        const responce = await fetch(apiUrl + `&appid=${apiKey}`);
-        var data = await responce.json();
-
-        console.log(data);
-        document.querySelector(".city").innerHTML = data.name;
-        document.querySelector(".temp").innerHTML = data.main.temp;
-        document.querySelector(".humidity").innerHTML = data.main.humidity;
-        document.querySelector(".wind").innerHTML = data.wind.speed;
-
-      }
-      checkWheather();
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
